<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ strings.xml
  ~ Copyright (C) 2014 Amin Bandali <me@aminb.org>
  ~
  ~ MATHTools is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MATHTools is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_cheat_sheet">Cheat Sheet</string>
    <string name="action_help">Help</string>

    <!-- General -->
    <string name="app_name">MATHTools</string>
    <string name="cheat_sheet">Cheat Sheet</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_sections_desc">Gray sections will be gradually added in future releases.</string>
    <string name="got_it">Got It</string>
    <string name="changelog">Change Log</string>

    <!-- Main Fragment Navigation -->
    <string name="vectors">Vectors</string>
    <string name="geometry">Geometry</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="calculus">Calculus</string>

    <!-- Font Awesome icon strings (DO NOT TRANSLATE) -->
    <string name="fa_vectors">{fa-arrow-up}</string>
    <string name="fa_geometry">{fa-cube}</string>
    <string name="fa_trigonometry">{fa-circle-thin}</string>
    <string name="fa_calculus">{fa-book}</string>

    <!-- Feedback Fragment -->
    <string name="get_in_touch">Get in touch!</string>
    <string name="feedback_desc">If you spotted a problem, there is a specific functionality that\'s missing and you think it fits well in the app or you simply got a suggestion, feel free to shoot me an email or leave a review/comment on app\'s page on Google Play!</string>
    <string name="google_play">Google Play</string>
    <string name="leave_a_review">Leave a review/comment</string>
    <string name="email">Email</string>
    <string name="my_email">me\@aminb.org</string>
    <string name="twitter">Twitter</string>
    <string name="my_twitter">\@aminban</string>
    <string name="google_plus">Google+</string>
    <string name="my_google_plus">+AminBandali</string>
    <string name="email_subject">MATHTools Feedback</string>
    <string name="email_body">Hi Amin, I\'m using MATHTools v%1$s and here\'s my feedback:\n\n</string>
    <string name="shoot_me_an_email">Shoot me an Email!</string>
    <string name="no_email_apps_installed">There are no email apps installed.</string>

    <!-- About Dialog -->
    <string name="title_about"><![CDATA[
        <b><i><font color="#FFFFFF">MATHTools</font></i></b>&nbsp;<small><font color="#EEEEEE">v%1$s</font></small>
    ]]></string>
    <string name="about_ok">OK</string>
    <string name="about_body"><![CDATA[
        <b><i>MATHTools</i> App</b><br>
        Author: <a href="http://aminb.org">Amin Bandali</a><br>
        Get: <a href="https://github.com/aminb/mathtools">Source on GitHub</a><br>
        <br><br>
        Special thanks to <i>awesome</i> <b>Michael Cook</b><br>
        for the beautiful app logo!<br>
        <b><a href="https://www.google.com/+michaelcook">+MichaelCook</a></b><br>
        <b><a href="https://plus.google.com/102718493746376292361">+Cookicons</a></b><br><br>
        <b>Thanks to these open source tools:</b><br>
        <b><a href="https://github.com/gabrielemariotti/cardslib">Card Library</a></b> and
        <b><a href="https://github.com/gabrielemariotti/changeloglib">ChangeLog Library</a></b><br>
        <i>by Gabriele Mariotti</i><br><br>
        <b><a href="https://github.com/JoanZapata/android-iconify/">Android Iconify</a></b><br>
        <i>by Joan Zapata</i><br><br>
        <b><a href="http://commons.apache.org/math/">Apache Commons Math</a></b><br>
        <i>by The Apache Software Foundation</i><br><br>

    ]]></string>


    <!-- Help Dialog -->
    <string name="title_help"><![CDATA[
        <b><i><font color="#FFFFFF">MATHTools</font></i></b>&nbsp;<small><font color="#EEEEEE">%1$s</font></small>
    ]]></string>

    <!-- Lines Help -->
    <string name="lines_help_body"><![CDATA[
        <b><i>Line Analyzer</i></b><br><br>

        - <i>Vector</i> equation of a line:<br>
        <b>R<sup><small>2</small></sup>:</b>
        (x, y) = (<b>x<sub><small>0</small></sub></b>, <b>y<sub><small>0</small></sub></b>) + k (<b>d<sub><small>x</small></sub></b>, <b>d<sub><small>y</small></sub></b>)<br>
        <b>R<sup><small>3</small></sup>:</b>
        (x, y, z) = (<b>x<sub><small>0</small></sub></b>, <b>y<sub><small>0</small></sub></b>, <b>z<sub><small>0</small></sub></b>) + k (<b>d<sub><small>x</small></sub></b>, <b>d<sub><small>y</small></sub></b>, <b>d<sub><small>y</small></sub></b>)<br>

        (<b>x<sub><small>0</small></sub></b>, <b>y<sub><small>0</small></sub></b>) - or (<b>x<sub><small>0</small></sub></b>, <b>y<sub><small>0</small></sub></b>, <b>z<sub><small>0</small></sub></b>) - is a point on the line.<br>
        (<b>d<sub><small>x</small></sub></b>, <b>d<sub><small>y</small></sub></b>) - or (<b>d<sub><small>x</small></sub></b>, <b>d<sub><small>y</small></sub></b>, <b>d<sub><small>y</small></sub></b>) - is the direction vector of the line.<br><br>

        - <i>Standard</i> equation of a line:<br>
        <b>R<sup><small>2</small></sup>:</b>
        <b>A</b>x + <b>B</b>y + <b>C</b> = 0<br>
        <b>R<sup><small>3</small></sup>:</b>
        -<br>
        <b>A</b> and <b>B</b> (coefficients of x and y) are the x and y components of the normal vector respectively.

    ]]></string>

    <!-- Vectors section titles -->
    <string name="vectors_products">Products</string>
    <string name="vectors_projections">Projections</string>
    <string name="vectors_lines">Lines</string>
    <string name="vectors_planes">Planes</string>

    <!-- Strings Common in "Vectors" sections -->
    <string name="vector_space">Vector Space:</string>
    <string name="two_d_space">2D Space</string>
    <string name="three_d_space">3D Space</string>
    <string name="r2">R&lt;sup&gt;&lt;small&gt;2&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="r3">R&lt;sup&gt;&lt;small&gt;3&lt;/small&gt;&lt;/sup&gt;</string>
    <string name="ax">a&lt;sub&gt;&lt;small&gt;x&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="ay">a&lt;sub&gt;&lt;small&gt;y&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="az">a&lt;sub&gt;&lt;small&gt;z&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="bx">b&lt;sub&gt;&lt;small&gt;x&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="by">b&lt;sub&gt;&lt;small&gt;y&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="bz">b&lt;sub&gt;&lt;small&gt;z&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="clear">Clear</string>

    <!-- Products Fragment -->
    <string name="vector_multiplication">Vector Multiplication</string>
    <string name="a_dot_b">a . b = </string>
    <string name="a_cross_b" formatted="false">\n\na x b = (%s, %s, %s)</string>

    <!-- Projections Fragment -->
    <string name="vector_projection">Vector Projection</string>
    <string name="a_on_b_scalar">a onto b (scalar):\n</string>
    <string name="a_on_b_vector" formatted="false">\n\na onto b (vector):\n(%s, %s</string>

    <!-- Lines Fragment -->
    <string name="line_analyzer">Line Analyzer</string>
    <string name="first_line">First Line</string>
    <string name="second_line">Second Line</string>
    <string name="x0">x&lt;sub&gt;&lt;small&gt;0&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="y0">y&lt;sub&gt;&lt;small&gt;0&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="z0">z&lt;sub&gt;&lt;small&gt;0&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="dx">d&lt;sub&gt;&lt;small&gt;x&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="dy">d&lt;sub&gt;&lt;small&gt;y&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="dz">d&lt;sub&gt;&lt;small&gt;z&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="xp0">x&#x2032;&lt;sub&gt;&lt;small&gt;0&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="yp0">y&#x2032;&lt;sub&gt;&lt;small&gt;0&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="zp0">z&#x2032;&lt;sub&gt;&lt;small&gt;0&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="dpx">d&#x2032;&lt;sub&gt;&lt;small&gt;x&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="dpy">d&#x2032;&lt;sub&gt;&lt;small&gt;y&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="dpz">d&#x2032;&lt;sub&gt;&lt;small&gt;z&lt;/small&gt;&lt;/sub&gt;</string>
    <string name="equation_form">Equation Form:</string>
    <string name="vector">Vector</string>
    <string name="parametric">Parametric</string>
    <string name="symmetric">Symmetric</string>
    <string name="standard">Standard</string>
    <string-array name="equation_forms_array">
        <item>@string/vector</item>
        <!--<item>@string/parametric</item>-->
        <!--<item>@string/symmetric</item>-->
        <item>@string/standard</item>
    </string-array>
    <string name="lines_intersecting">The two lines intersect.\n\nPoint of intersection:\n(</string>
    <string name="lines_parallel">The two lines are parallel.\n\nDistance between them: </string>
    <string name="lines_identical">The two lines are identical.</string>
    <string name="lines_skew">The two lines are skew.\n\nDistance between them: </string>
    <string name="lines_intersecting_r3">The two lines are not parallel and are not skew.\n\nThey intersect at\n(</string>
    <string name="units"> units</string>
    <string name="precision_pattern">###.######</string>

    <!-- Trigonometry section titles -->
    <string name="trig_calculator">Calculator</string>

    <!-- Calculator Fragment -->
    <string name="trigonometry_calculator">Trigonometry Calculator</string>

</resources>
