<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_cheat_sheet"
        android:showAsAction="always"
        android:title="@string/action_cheat_sheet"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_cheat_sheet"/>
    <item android:id="@+id/action_settings"
        android:enabled="false"
        android:title="@string/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never" />
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        android:orderInCategory="300"
        android:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="400"
        android:showAsAction="never" />
</menu>