<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_vectors_projections.xml
  ~ Copyright (C) 2014 Amin Bandali <me@aminb.org>
  ~
  ~ MATHTools is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MATHTools is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vector_projection"
        android:textColor="@color/mathtoolstheme_color"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/vector_space"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:id="@+id/rB2D"
                android:textSize="15sp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/two_d_space"/>
            <RadioButton
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rB3D"
                android:textSize="15sp"
                android:text="@string/three_d_space"/>
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/projectionsll1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" >

        <EditText
            android:id="@+id/projectionstextx1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@+id/projectionstexty1"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/projectionstexty1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@+id/projectionstextx2"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/projectionstextz1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@+id/projectionstextx2"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/projectionstextx2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@+id/projectionstexty2"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/projectionstexty2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@+id/projectionstextx3"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/projectionstextz2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal|numberSigned"
            android:nextFocusDown="@+id/projectionstextx3"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:visibility="gone"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnprojectionsclear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="12dp"
        android:text="@string/clear" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="4dp"
        android:id="@+id/result"/>
</LinearLayout>
